# DESKSOS-Desktop-App-

./: .gitignore  App_Interface_Mockup  Email_Outlook_Repair  Network_Connectivity  PROJECT-STRUCTURE.md  Password_Login_resets  Performance_Booster  Printer_Rescue  README.md  docker-compose.yml  nginx.conf
.claude/: settings.json  settings.local.json
deployment-package/: DeskSOS-Validation.ps1  GPO-Deployment.ps1  Manual-Deployment.ps1  QUICK-START.md  README-UPDATED.md  README.md  README_TEMP.md  TESTING-CHECKLIST.md  USER-GUIDE.md  Uninstall.ps1  VALIDATION-CHECKLIST.md  Verify-Installation.ps1  ~$ER-GUIDE.md  ~$README.md
deployment-package/client/src/components/modules/: PROJECT-STRUCTURE.md
renderer/: App.tsx  Architecture Overview  docker-compose.yml
renderer/server/: dockerfile  nginx.conf  package.json
renderer/server/src/: index.ts
renderer/server/src/entities/: Activity.ts  KnowledgeArticle.ts  Team.ts  Ticket.ts  User.ts
renderer/server/src/routes/: tickets.ts
renderer/server/src/services/: cache.ts  websocket.ts
tauri-app/: README.md  index.html  package.json
tauri-app/src/: App.tsx  App.tsx.backup  App.tsx.part1  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/components/modules/: Dashboard.tsx  DashboardSamples.tsx  DiskHealth.tsx  DiskSpace.tsx  EventLog.tsx  InstalledSoftware.tsx  MemoryConsumers.tsx  NetworkAdapters.tsx  NetworkDiagnostics.tsx  NetworkFixes.tsx  NetworkTools.tsx  RecentErrors.tsx  RunningServices.tsx  TicketBuilder.tsx  WindowsUpdate.tsx
(+16 files in other folders)
