[package]
name = "desksos"
version = "1.0.0"
description = "DeskSOS - Desktop Support Troubleshooting App"
authors = ["DeskSOS Team"]
edition = "2021"

[lib]
name = "desksos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
